css/styleshexagon2.css
/* line 6, ../scss/styleshexagon.scss */
.hex-Container {
  height: auto;
  width: auto;
  margin: auto;
}

/* line 12, ../scss/styleshexagon.scss */
.hexagon .hexagon2 .text {
  position: absolute;
  top: -80px;
  left: 0;
  font: 12px sans-serif;
  color: #FF00FF;
  width: 400px;
  height: 230.94011px;
  overflow: visible;
  line-height: 1;
}

/* line 24, ../scss/styleshexagon.scss */
.hexagon {
  position: relative;
  width: 400px;
  height: 230.94011px;
  background-color: #C6538C;
  margin: 115.47005px;
  margin-right: auto;
  margin-left: auto;
}

/* line 34, ../scss/styleshexagon.scss */
.hexagon2 {
  position: relative;
  width: 400px;
  height: 230.94011px;
  background-color: #C6538C;
  margin: 115.47005px;
  margin-right: auto;
  margin-left: auto;
}

@media only screen and (min-width: 778px) and (max-width: 1200px) {
  /* line 46, ../scss/styleshexagon.scss */
  .hexagon {
    display: grid;
    right: 105px;
  }
  
  /* line 51, ../scss/styleshexagon.scss */
  .hexagon2 {
    display: grid;
    left: 105px;
  }
  
  /* line 57, ../scss/styleshexagon.scss */
  .hex-Container {
  }
  
  .hexPair {
    margin: auto;
    top: 99px;
  }
  
  .hexImg {
  }
  
  .text {
    width: 40% !important;
    position: relative !important;
    clear: none !important;
    display: block !important;
    float: left !important;
    text-align: left !important;
    margin: 0 20px !important;
  }
  
  .hexContent {
    margin: 0px !important;
    padding: 0px !important;
  }
  
  .hexTitle {
    font-size: 34px;
    display: inline-block !important;
    position: absolute !important;
    clear: both !important;
    text-align: center;
    margin: 0 10px 20px !important;
    top: -69px;
    border-radius: 10px;
    left: 9px;
    background: #CBD9EB;
    width: 367px !important;
    z-index: 3;
  }
}

@media only screen and (min-width: 1200px) {
  /* line 63, ../scss/styleshexagon.scss */
  .hexagon {
    display: inline-block !important;
  }
  
  /* line 67, ../scss/styleshexagon.scss */
  .hexagon2 {
    display: inline-block !important;
    bottom: -350px !important;
    left: -201px !important;
  }
  
  /* line 73, ../scss/styleshexagon.scss */
  .hexContainer {
    padding: 0px !important;
    margin: 0 auto !important;
    left: 196px !important;
  }
  
  .hexPair {
    display: inline-block !important;
    padding: 0px !important;
    float: right !important;
    margin-left: -397.5px !important;
    margin-right: auto !important;
    margin-bottom: 239px !important;
    overflow: visible !important;
  }
  
  .text {
    width: 40% !important;
    position: relative !important;
    clear: none !important;
    display: block !important;
    float: left !important;
    text-align: left !important;
    margin: 0 20px !important;
  }
  
  .hexContent {
    margin: 0px !important;
    padding: 0px !important;
  }
  
  .hexTitle {
    font-size: 34px !important;
    display: inline-block !important;
    position: absolute !important;
    clear: both !important;
    text-align: center !important;
    margin: 0 10px 20px !important;
    top: -69px !important;
    border-radius: 10px !important;
    left: 9px !important;
    background: #CBD9EB;
    width: 367px !important;
    z-index: 3 !important;
  }
}

@media only screen and (min-width: 0px) and (max-width: 778px) {
  /* line 79, ../scss/styleshexagon.scss */
  .hexagon {
    display: grid !important;
    margin-bottom: 232px;
  }
  
  /* line 83, ../scss/styleshexagon.scss */
  .hexagon2 {
    display: grid !important;
    margin-bottom: 230px;
    top: 0px;
  }
  
  .hexImg {
  }
  
  .text {
    width: 40% !important;
    position: relative !important;
    clear: none !important;
    display: block !important;
    float: left !important;
    text-align: left !important;
    margin: 0 20px !important;
  }
  
  .hexContent {
    margin: 0px !important;
    padding: 0px !important;
  }
  
  .hexTitle {
    font-size: 34px;
    display: inline-block !important;
    position: absolute !important;
    clear: both !important;
    text-align: center;
    margin: 0 10px 20px !important;
    top: -69px;
    border-radius: 10px;
    left: 9px;
    background: #CBD9EB;
    width: 367px !important;
    z-index: 3;
  }
}

/* line 90, ../scss/styleshexagon.scss */
.hexagon:before,
.hexagon:after,
.hexagon2:before,
.hexagon2:after {
  content: "";
  position: absolute;
  width: 0;
  border-left: 200px solid transparent;
  border-right: 200px solid transparent;
}

/* line 101, ../scss/styleshexagon.scss */
.hexagon:before,
.hexagon2:before {
  bottom: 100%;
  border-bottom: 115.47005px solid #C6538C;
}

/* line 107, ../scss/styleshexagon.scss */
.hexagon:after,
.hexagon2:after {
  top: 100%;
  left: 0;
  width: 0;
  border-top: 115.47005px solid #C6538C;
}

